[project]
name = "pdgstaging"
version = "1.1.0"
description = "Geospatial data tiling workflow"
authors = [
    {name = "Robyn Thiessen-Bock", email = "thiessenbock@nceas.ucsb.edu"},
    {name = "Juliet Cohen", email = "jcohen@nceas.ucsb.edu"},
    {name = "Lauren Walker", email = "walker@nceas.ucsb.edu"},
    {name = "Matthew B. Jones", email = "jones@nceas.ucsb.edu"},
    {name = "Rushiraj Nenuji", email = "nenuji@nceas.ucsb.edu"},
    {name = "Alyona Kosobokova", email = "alyonak@nceas.ucsb.edu"}  
]
license = {text = "Apache Software License 2.0"}
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy >= 1.21, < 2.0",
    "pandas >= 1.5.3, < 2.0",
    "shapely >= 2, < 3.0",
    "geopandas >= 0.12.2, < 1.0",
    "morecantile",
    "Rtree",
    "filelock >= 3.6, < 4.0",
    "coloraide >= 0.10, < 1",
    "colormaps == 0.4.0",
    "pyarrow",
]

[project.urls]
Repository = "https://github.com/PermafrostDiscoveryGateway/viz-staging"

[project.optional-dependencies]
dev = [
    "pytest >= 7",
    "black >= 24.1.1",
    "pre-commit >= 3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
